kubernetes/rancher/rancher-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rancher.sfkj.sit
    http:
      paths:
      - path: /
        backend:
          serviceName: rancher
          servicePort: 80
